templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: demo-app
