templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-app
  name: demo-route
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: demo-service
    weight: 100
  wildcardPolicy: None
